// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogFooter > renders a danger-variant submit 1`] = `
<div
  class="flex justify-end gap-3"
>
  <div
    class="flex gap-3"
  >
    <button
      class="rounded-md px-4 py-2 text-sm font-medium text-neutral-700 transition-colors hover:bg-neutral-100 dark:text-neutral-300 dark:hover:bg-neutral-800"
      type="button"
    >
      Cancel
    </button>
    <button
      class="rounded-md bg-red-600 px-4 py-2 text-sm font-medium text-white transition-all duration-150 hover:bg-red-700 disabled:opacity-50 focus-visible:ring-2 focus-visible:ring-red-400 dark:bg-red-600 dark:hover:bg-red-700"
      type="submit"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`DialogFooter > renders the default Save/Cancel pair 1`] = `
<div
  class="flex justify-end gap-3"
>
  <div
    class="flex gap-3"
  >
    <button
      class="rounded-md px-4 py-2 text-sm font-medium text-neutral-700 transition-colors hover:bg-neutral-100 dark:text-neutral-300 dark:hover:bg-neutral-800"
      type="button"
    >
      Cancel
    </button>
    <button
      class="rounded-md bg-primary-600 px-4 py-2 text-sm font-medium text-white transition-all duration-150 hover:bg-primary-700 disabled:opacity-50 focus-visible:ring-2 focus-visible:ring-primary-400 dark:bg-primary-500 dark:text-white dark:hover:bg-primary-400"
      type="submit"
    >
      Save
    </button>
  </div>
</div>
`;

exports[`DialogFooter > renders with a left slot and a custom submit child 1`] = `
<div
  class="flex justify-between gap-3"
>
  <div
    class="flex items-center"
  >
    <button
      type="button"
    >
      View History
    </button>
  </div>
  <div
    class="flex gap-3"
  >
    <button
      class="rounded-md px-4 py-2 text-sm font-medium text-neutral-700 transition-colors hover:bg-neutral-100 dark:text-neutral-300 dark:hover:bg-neutral-800"
      type="button"
    >
      Cancel
    </button>
    <button
      class="rounded-md bg-primary-600 px-4 py-2 text-sm font-medium text-white transition-all duration-150 hover:bg-primary-700 disabled:opacity-50 focus-visible:ring-2 focus-visible:ring-primary-400 dark:bg-primary-500 dark:text-white dark:hover:bg-primary-400"
      type="button"
    >
      <span>
        Apply
      </span>
    </button>
  </div>
</div>
`;
